Blurring issue fixed

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -2,8 +2,8 @@ body {
   height: 5000px;
 }
 
-.enableBlur > *:not(.loginPart) {
-  filter: blur(3px);
+.enableBlur {
+  backdrop-filter: blur(10px);
 }
 
 * {
@@ -64,7 +64,6 @@ header h3 span {
   background-position: center;
   transform: translateY(-100%);
   transition: all 0.5s linear;
-  /* filter: blur(10px); */
 }
 
 #layout .timeHolder,
@@ -77,7 +76,6 @@ header h3 span {
 #layout .userList {
   left: 0;
   display: none;
-  filter: blur(0px);
 }
 #layout .userList li {
   cursor: pointer;
@@ -173,4 +171,12 @@ header h3 span {
 
 #layout .loginPart .inputWrapper .alert {
   display: none;
+}
+
+#layout .blurredDiv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
